[20260302][Tamnm]: complete Shift module
