# src/modules/shift/shift.controller.ts
@@ -1,4 +1,5 @@
-import { BaseCrudController } from "../../core";
+import { NextFunction, Request, Response } from "express";
+import { AuthenticatedUserRequest, BaseCrudController, formatResponse, HttpStatus } from "../../core";
 import CreateShiftDto from "./dto/create.dto";
 import { ShiftItemDto } from "./dto/item.dto";
 import { SearchPaginationItemDto } from "./dto/search.dto";
@@ -10,13 +11,49 @@ import { mapItemToResponse } from "./shift.mapper";
 export class ShiftController extends BaseCrudController<
 IShift,
 CreateShiftDto,
-ShiftItemDto,
 UpdateShiftDto,
 SearchPaginationItemDto,
+ShiftItemDto,
 ShiftService> {
   constructor(service: ShiftService) {
     super(service,mapItemToResponse);
   }
 
-  
+  public changeStatus = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const { id } = req.params;
+      await this.service.changeStatus(id, req.body, (req as AuthenticatedUserRequest)?.user?.id || "");
+      res.status(HttpStatus.Success).json(formatResponse<null>(null));
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public getAllShifts = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const { franchise_id } = req.query;
+      const shifts = franchise_id 
+        ? await this.service.getAllShiftsByFranchise(String(franchise_id))
+        : await this.service.getAllShifts();
+        
+      const data = shifts.map((s) => ({ 
+        value: String(s._id), 
+        name: s.name,
+        franchise_id: s.franchise_id?.toString()
+      }));
+      res.status(HttpStatus.Success).json(formatResponse(data));
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public getAllShiftsByFranchiseId = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const { id } = req.params;
+      const shifts = await this.service.getAllShiftsByFranchise(id);
+      res.status(HttpStatus.Success).json(formatResponse(shifts));
+    } catch (error) {
+      next(error);
+    }
+  };
 }
